bag-fix On samsung galaxy a51 padding of container util was too big Change padding of container util from 1.2rem to 0.6rem for smaller phone

--- a/styles/_utils.scss
+++ b/styles/_utils.scss
@@ -17,7 +17,7 @@
     };
     @include smaller-mobile {
         column-gap: 2.3rem;
-        padding: 0 2rem;
+        padding: 0 0.6rem;
     };
 }
 
