--- a/styles/styles.css
+++ b/styles/styles.css
@@ -183,7 +183,7 @@ svg * {
   .container {
     -moz-column-gap: 2.3rem;
          column-gap: 2.3rem;
-    padding: 0 2rem;
+    padding: 0 0.6rem;
   }
 }
 
